Change vagrant box name

--- a/standard-debian-8.0.0-amd64/Vagrantfile
+++ b/standard-debian-8.0.0-amd64/Vagrantfile
@@ -11,7 +11,7 @@ SCRIPT
 
 Vagrant.configure("2") do |config|
   # Base box.
-  config.vm.box = "xnerv/standard-debian-8.0.0-amd64.box"
+  config.vm.box = "xnerv/standard-debian-8-amd64.box"
   
   # Shared folders.
   config.vm.synced_folder "./", "/vagrant"
